kubernetes/apps/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      enableServiceLinks: true
      securityContext:
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:develop
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 9696
          name: http
        securityContext:
          privileged: false
        volumeMounts:
        - name: prowlarr-data
          mountPath: /config
      volumes:
      - name: prowlarr-data
        persistentVolumeClaim:
          claimName: prowlarr-data
