kubernetes/apps/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
  - name: http
    port: 9696
    targetPort: 9696
    protocol: TCP
