kubernetes/apps/prowlarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.${CLUSTER_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: prowlarr
          port: 9696
  tls:
    secretName: efym-net-tls
